prod: added dihybrid ps

--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -199,6 +199,9 @@
                             <li><a href="punnettsquare.html" class="link-light rounded text-truncate"><i
                                         class="bi bi-gender-ambiguous"></i>
                                     Punnett Square Generator</a></li>
+                            <li><a href="dihybridpunnettsquare.html" class="link-light rounded text-truncate"><i
+                                        class="bi bi-gender-ambiguous"></i>
+                                    Dihybrid Punnett Square Generator</a></li>
                             <li>
                                 <p class="nav-header rounded user-select-none">Complementarity</p>
                             </li>
