prod: added weekly puzzle

--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -23,6 +23,11 @@
                     </a>
                 </li>
                 <li class="py-1">
+                    <a class="btn btn-offcanvas-link align-items-center rounded" href="weeklypuzzle.html">
+                        <i class="bi bi-puzzle"></i>Solve our Weekly Puzzle
+                    </a>
+                </li>
+                <li class="py-1">
                     <a class="btn btn-offcanvas-link align-items-center rounded" href="calculator.html">
                         <i class="bi bi-calculator"></i>Scientific Calculator
                     </a>
