--- a/Styles/Site.css
+++ b/Styles/Site.css
@@ -346,7 +346,8 @@ var {
 #drnaout,
 #proteincontout,
 #proteintodnarnout,
-#rnatodnaout {
+#rnatodnaout,
+#puzzleoutput {
     font-size: 20px !important;
     line-height: 24px !important;
     padding-left: 3em !important;
