--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -23,11 +23,6 @@
                     </a>
                 </li>
                 <li class="py-1">
-                    <a class="btn btn-offcanvas-link align-items-center rounded" href="weeklypuzzle.html">
-                        <i class="bi bi-puzzle"></i>Solve our Weekly Puzzle
-                    </a>
-                </li>
-                <li class="py-1">
                     <a class="btn btn-offcanvas-link align-items-center rounded" href="calculator.html">
                         <i class="bi bi-calculator"></i>Scientific Calculator
                     </a>
@@ -35,6 +30,11 @@
                 <li class="py-1">
                     <a class="btn btn-offcanvas-link align-items-center rounded" href="cheatsheet.html">
                         <i class="bi bi-book"></i>Cheat Sheet
+                    </a>
+                </li>
+                <li class="py-1">
+                    <a class="btn btn-offcanvas-link align-items-center rounded" href="weeklypuzzle.html">
+                        <i class="bi bi-puzzle"></i>Weekly Puzzle
                     </a>
                 </li>
                 <li class="py-1">
