--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -256,6 +256,9 @@
                             <li>
                                 <p class="nav-header rounded user-select-none">Basic Chemistry</p>
                             </li>
+                            <li><a href="electronicstructureofatoms.html" class="link-light rounded text-truncate"><i
+                                        class="bi bi-bullseye"></i>
+                                    Electronic Structure of Atoms Calculator</a></li>
                             <li><a href="subatomicparticles.html" class="link-light rounded text-truncate"
                                     style="max-width: 300px;" data-bs-toggle="tooltip" data-bs-placement="top"
                                     title="Atomic-Mass number to number of Subatomic Particles"><i
