--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -243,6 +243,12 @@
                             <li><a href="proteintodnarna.html" class="link-light rounded text-truncate"><i
                                         class="bi bi-hexagon"></i>
                                     Protein to DNA/RNA Translator</a></li>
+                            <li>
+                                <p class="nav-header rounded user-select-none">Genetics</p>
+                            </li>
+                            <li><a href="geneexpression.html" class="link-light rounded text-truncate"><i
+                                        class="bi bi-info-circle"></i>
+                                    Expression of Genetic Information</a></li>
                         </ul>
                     </div>
                 </li>
