prod: added all additions of a nat num calc

--- a/Styles/Site.css
+++ b/Styles/Site.css
@@ -354,7 +354,8 @@ var {
 #rnatodnaout,
 #puzzleoutput,
 #electronout,
-#expressionout {
+#expressionout,
+#natnumberout {
     font-size: 20px !important;
     line-height: 24px !important;
     padding-left: 3em !important;
