--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -121,6 +121,9 @@
                             <li><a href="numberpairs.html" class="link-light rounded text-truncate"><i
                                         class="bi bi-bezier2"></i>
                                     Number of Pairs</a></li>
+                            <li><a href="allpossibleadditions.html" class="link-light rounded text-truncate"><i
+                                        class="bi bi-bezier2"></i>
+                                    Find all the additions for a natural number</a></li>
                         </ul>
                     </div>
                 </li>
