--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -122,7 +122,7 @@
                                         class="bi bi-bezier2"></i>
                                     Number of Pairs</a></li>
                             <li><a href="allpossibleadditions.html" class="link-light rounded text-truncate"><i
-                                        class="bi bi-bezier2"></i>
+                                        class="bi bi-code"></i>
                                     Find all the additions for a natural number</a></li>
                         </ul>
                     </div>
